fix logo to right on small screen sizes, remove extra space on map to right

--- a/frontend/src/components/Map/styles.css
+++ b/frontend/src/components/Map/styles.css
@@ -14,3 +14,7 @@
 .mapbox-gl-draw_polygon.active {
   background-color: lightgray;
 }
+
+.mapboxgl-canvas {
+  width: 100%;
+}
